[FIX] div.cbox and .cbox-data need overflow:hidden for IE7 to wrap the contents (maybe only a problem for litecss layouts but added for all).

--- a/mods/trunk/themes/andreas08_tiki_3/styles/andreas08.css
+++ b/mods/trunk/themes/andreas08_tiki_3/styles/andreas08.css
@@ -723,13 +723,14 @@ div.cbox {
 	border: 1px solid #c0c0c0;
 	background: #fafbfc;
 	color: #505050;
-	line-height: 1.5em}
+	line-height: 1.5em;
+	overflow: hidden}
 
 .cbox-title {
 	font-weight: bold;
 	border-bottom: 1px solid #c0c0c0}
 
-.cbox-data {}
+.cbox-data {overflow: hidden}
 
 .rbox {}
 
