--- a/mods/trunk/themes/eatlon_tiki_3/styles/eatlon.css
+++ b/mods/trunk/themes/eatlon_tiki_3/styles/eatlon.css
@@ -758,7 +758,8 @@ h3.box-title {
 /** Other boxes **/
 .cbox {
 	border: 1px solid #e0e0e0;
-	background: white;}
+	background: white;
+	overflow: hidden}
 
 .cbox-title {
 	border-bottom: 1px solid #e0e0e0;
@@ -767,7 +768,9 @@ h3.box-title {
 	padding: 3px 3px 1px 3px}
 
 .cboxlink {}
-.cbox-data {padding: 3px}
+.cbox-data {
+	padding: 3px;
+	overflow: hidden}
 
 .rbox {margin: 5px 10px 5px}
 
