--- a/mods/trunk/themes/faulkner_tiki_3/styles/faulkner.css
+++ b/mods/trunk/themes/faulkner_tiki_3/styles/faulkner.css
@@ -909,10 +909,10 @@ ul.module li {list-style: none }
 .box-footer {}
 
 /** Other boxes **/
-div.cbox {}
+div.cbox {overflow: hidden}
 .cbox-title {}
 .cboxlink {}
-.cbox-data {}
+.cbox-data {overflow: hidden}
 
 .rbox {}
 .rbox-title {}
